--- a/source/Views/SuccessStoryEditManual.xaml
+++ b/source/Views/SuccessStoryEditManual.xaml
@@ -10,7 +10,8 @@
              xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
              xmlns:converters1="clr-namespace:SuccessStory.Converters"
              xmlns:controls1="clr-namespace:CommonPluginsShared.Controls"
-             xmlns:wpftk="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel"
+             xmlns:wpftk="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel" 
+             xmlns:temperaturemeasurementtool="clr-namespace:TemperatureMeasurementTool"
              mc:Ignorable="d" Height="700" Width="800">
 
     <UserControl.Resources>
@@ -19,6 +20,7 @@
         <convertersshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <converters1:SetColorConverter x:Key="SetColorConverter" />
         <convertersshared:IndexConverter x:Key="IndexConverter" />
+        <converters:StringNullOrEmptyToVisibilityConverter x:Key="StringNullOrEmptyToVisibilityConverter" />
     </UserControl.Resources>
 
     <Grid Margin="10" Name="PART_GridContener">
@@ -70,7 +72,7 @@
 
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid Margin="0,5" Height="65" Width="750">
+                        <Grid Margin="0,5" Height="75" Width="750">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="58" />
                                 <ColumnDefinition Width="*" />
@@ -149,6 +151,8 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="10" />
                                     <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="10" />
+                                    <ColumnDefinition Width="auto" />
                                 </Grid.ColumnDefinitions>
 
                                 <Grid.RowDefinitions>
@@ -180,8 +184,13 @@
                                     <Label Content="Is unlocked" />
                                 </CheckBox>
                                 <DatePicker Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0"
-                                            SelectedDate="{Binding DateWhenUnlocked}" Width="130" Name="PART_DtUnlock"
+                                            SelectedDate="{Binding DateWhenUnlocked}" Width="230" Name="PART_DtUnlock"
+                                            Tag="{Binding IsUnlock, Mode=OneTime}"
                                             SelectedDateChanged="DatePicker_SelectedDateChanged" />
+                                <temperaturemeasurementtool:TimePicker Grid.Column="4" Grid.Row="0" Grid.RowSpan="5" x:Name="PART_Time" TimeChanged="PART_Time_TimeChanged"
+                                                                       Time="{Binding DateUnlocked}"
+                                                                       Tag="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Mode=OneWay, Converter={StaticResource IndexConverter}}"                                          
+                                                                       Visibility="{Binding ElementName=PART_DtUnlock, Path=Tag, Converter={StaticResource BooleanToVisibilityConverter}}" />
                             </Grid>
                         </Grid>
                     </DataTemplate>
