--- a/source/Views/SuccessStoryCategoryView.xaml
+++ b/source/Views/SuccessStoryCategoryView.xaml
@@ -8,7 +8,7 @@
              xmlns:controls="clr-namespace:SuccessStory.Controls"
              xmlns:controls1="clr-namespace:CommonPluginsShared.Controls" 
              xmlns:controls2="clr-namespace:CommonPluginsControls.Controls"
-             mc:Ignorable="d" Height="700" Width="1100">
+             mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="1100">
 
     <UserControl.Resources>
         <converters:StringNullOrEmptyToVisibilityConverter x:Key="StringNullOrEmptyToVisibilityConverter" />
@@ -98,9 +98,51 @@
             </Grid>
         </Grid>
 
-        <Grid Grid.Column="0" Grid.Row="2" Name="PART_Category_List_Contener">
-            <ListBox Height="{Binding ElementName=PART_Category_List_Contener, Path=ActualHeight}" Name="PART_ListCategory"
-                     SelectionChanged="PART_ListCategory_SelectionChanged">
+        <DockPanel Grid.Column="0" Grid.Row="2" LastChildFill="True">
+            <StackPanel DockPanel.Dock="Bottom" Margin="0,10,0,0">
+                <Label Content="{DynamicResource LOCSuccessStoryAchStats}" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,10" />
+
+                <DockPanel>
+                    <StackPanel DockPanel.Dock="Left">
+                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                            <TextBlock Text="&#127942;" Margin="0,0,5,0" TextAlignment="Center" Width="20" Style="{DynamicResource BaseTextBlockStyle}" />
+                            <TextBlock Text="{DynamicResource LOCSuccessStoryCommon}" Style="{DynamicResource BaseTextBlockStyle}" />
+                        </StackPanel>
+
+                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                            <TextBlock Text="&#127942;" Margin="0,0,5,0" TextAlignment="Center" Width="20" Style="{DynamicResource BaseTextBlockStyle}" Foreground="{Binding Settings.RarityUncommonColor}" />
+                            <TextBlock Text="{DynamicResource LOCSuccessStoryNoCommon}" Style="{DynamicResource BaseTextBlockStyle}" />
+                        </StackPanel>
+
+                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                            <TextBlock Text="&#127942;" Margin="0,0,5,0" TextAlignment="Center" Width="20" Style="{DynamicResource BaseTextBlockStyle}" Foreground="{Binding Settings.RarityRareColor}" />
+                            <TextBlock Text="{DynamicResource LOCSuccessStoryRare}" Style="{DynamicResource BaseTextBlockStyle}" />
+                        </StackPanel>
+
+                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal" Visibility="{Binding Settings.UseUltraRare, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <TextBlock Text="&#127942;" Margin="0,0,5,0" TextAlignment="Center" Width="20" Style="{DynamicResource BaseTextBlockStyle}" Foreground="{Binding Settings.RarityUltraRareColor}" />
+                            <TextBlock Text="{DynamicResource LOCSuccessStoryUltraRare}" Style="{DynamicResource BaseTextBlockStyle}" />
+                        </StackPanel>
+
+                        <StackPanel Margin="0,10,0,0" Orientation="Horizontal" Visibility="{Binding Settings.EnableGamerScore, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <TextBlock Text="&#xeacd;" FontFamily="{DynamicResource CommonFont}" Margin="0,0,5,0" TextAlignment="Center" Width="20" Style="{DynamicResource BaseTextBlockStyle}" VerticalAlignment="Center" />
+                            <TextBlock Text="Gamerscore" Style="{DynamicResource BaseTextBlockStyle}" />
+                        </StackPanel>
+                    </StackPanel>
+
+                    <StackPanel DockPanel.Dock="Right">
+                        <Label Content="{Binding AchCommon.Stats}" Margin="0,10,0,0" HorizontalAlignment="Center" />
+                        <Label Content="{Binding AchNoCommon.Stats}" Margin="0,10,0,0" HorizontalAlignment="Center" />
+                        <Label Content="{Binding AchRare.Stats}" Margin="0,10,0,0" HorizontalAlignment="Center" />
+                        <Label Content="{Binding AchUltraRare.Stats}" Margin="0,10,0,0" HorizontalAlignment="Center" Visibility="{Binding Settings.UseUltraRare, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <Label Content="{Binding TotalGamerScore}" Margin="0,10,0,0" HorizontalAlignment="Center" Visibility="{Binding Settings.EnableGamerScore, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                    </StackPanel>
+
+                    <StackPanel />
+                </DockPanel>
+            </StackPanel>
+
+            <ListBox Name="PART_ListCategory" SelectionChanged="PART_ListCategory_SelectionChanged">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid Margin="5">
@@ -117,6 +159,8 @@
 
                             <controls1:ImageAsync MinWidth="48" Height="48" Source="{Binding CategoryIcon, IsAsync=True}" Grid.RowSpan="3"
                                                   HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <controls1:ImageAsync Width="18" Height="18" Source="{Binding Icon100Percent, IsAsync=True}" Grid.RowSpan="3"
+                                                  HorizontalAlignment="Left" VerticalAlignment="Bottom" />
 
                             <controls2:TextBlockTrimmed Grid.Column="2" Text="{Binding CategoryName, FallbackValue='category'}" TextTrimming="CharacterEllipsis"
                                                         Width="250" HorizontalAlignment="Left" />
@@ -129,7 +173,7 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-        </Grid>
+        </DockPanel>
         
         <Grid Name="PART_Achievements_List_Contener" Grid.Column="2" Grid.Row="2" Grid.RowSpan="3"
               Tag="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.GameContext}">
