--- a/source/Views/SuccessStorySettingsView.xaml
+++ b/source/Views/SuccessStorySettingsView.xaml
@@ -68,7 +68,7 @@
                             <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
 
-                        <Expander Grid.Row="0">
+                        <Expander Grid.Row="0" AttachedProperties:ExpanderAttachedProperties.HideExpanderArrow="True">
                             <Expander.Style>
                                 <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource {x:Type Expander}}">
                                     <Setter Property="Background" Value="Transparent" />
@@ -98,14 +98,14 @@
                                 </Grid>
                             </Expander.Header>
 
-                            <Expander.Content>
+                            <!--Expander.Content>
                                 <Border IsEnabled="{Binding ElementName=PART_EnableRetroAchievements, Path=IsChecked}"
 				                        Margin="5" Padding="10"
 				                        BorderBrush="{DynamicResource PopupBorderBrush}"
 				                        BorderThickness="{DynamicResource PopupBorderThickness}">
                                     <CheckBox Content="{DynamicResource LOCSuccessStoryGroupSteamAchievements}" IsChecked="{Binding Settings.SteamGroupData}" />
                                 </Border>
-                            </Expander.Content>
+                            </Expander.Content-->
                         </Expander>
 
                         <Expander Grid.Row="2" AttachedProperties:ExpanderAttachedProperties.HideExpanderArrow="True">
