--- a/source/Views/SuccessStoryView.xaml
+++ b/source/Views/SuccessStoryView.xaml
@@ -527,8 +527,9 @@
         </TabItem>
 
         <TabItem Header="{DynamicResource LOCListViewLabel}">
-            <DockPanel Margin="10" LastChildFill="True">
-                <controlsShared:ListViewExtend FontSize="24" Style="{StaticResource {x:Type ListView}}" 
+            <Grid Margin="0,10,0,0" Name="PART_ListviewAllContener">
+                <controlsShared:ListViewExtend x:Name="PART_ListviewAll" Height="{Binding ElementName=PART_ListviewAllContener, Path=ActualHeight}"
+                                               FontSize="24" Style="{StaticResource {x:Type ListView}}" 
                                                SortingEnable="True" ItemsSource="{Binding ListAll}" 
                                                SortingDefaultDataName="AchDateUnlock" SortingSortDirection="Descending">
 
@@ -641,7 +642,7 @@
                         </GridView>
                     </ListView.View>
                 </controlsShared:ListViewExtend>
-            </DockPanel>
+            </Grid>
         </TabItem>
     </TabControl>
 </UserControl>
